# o2sim

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  ConfigurationManager.cxx  ConfigurationManager.h  ModuleManagerDelegate.cxx  RunManager.cxx  RunManager.h  RunManagerDelegate.cxx  RunManagerDelegate.h  o2simCore_LinkDef.h  ro2simCore_LinkDef.h
Generator/: CMakeLists.txt  CrossSectionInfo.cxx  CrossSectionInfo.h  Generator.cxx  Generator.h  GeneratorHeader.cxx  GeneratorHeader.h  GeneratorHepMC.cxx  GeneratorHepMC.h  GeneratorInfo.cxx  GeneratorInfo.h  GeneratorManager.cxx  GeneratorManager.h  GeneratorManagerBox.h  GeneratorManagerHijing.cxx  GeneratorManagerHijing.h  GeneratorManagerPythia.cxx  GeneratorManagerPythia.h  GeneratorTGenerator.cxx  GeneratorTGenerator.h  HeavyIonInfo.cxx  HeavyIonInfo.h  MCEventHeader.cxx  MCEventHeader.h  PrimaryGenerator.cxx  PrimaryGenerator.h  o2simGenerator_LinkDef.h  ro2simGenerator_LinkDef.h
GeneratorManager/: CMakeLists.txt  Generator.cxx  GeneratorHepMC.cxx  GeneratorHepMC.h  GeneratorManager.cxx  GeneratorManager.h  GeneratorManagerBox.cxx  GeneratorManagerBox.h  GeneratorManagerDelegate.cxx  GeneratorManagerDelegate.h  GeneratorManagerHijing.cxx  GeneratorManagerHijing.h  GeneratorManagerPythia.cxx  GeneratorManagerPythia6.cxx  GeneratorManagerPythia6.h  o2simGeneratorManager_LinkDef.h
Module/: CMakeLists.txt  ModuleManager.cxx  ModuleManager.h  ModuleManagerCave.cxx  ModuleManagerCave.h  ModuleManagerTPC.h  o2simModule_LinkDef.h  ro2simModule_LinkDef.h
ModuleManager/: CMakeLists.txt  ModuleManager.cxx  ModuleManager.h  ModuleManagerCave.cxx  ModuleManagerCave.h  ModuleManagerDelegate.cxx  ModuleManagerDelegate.h  ModuleManagerTPC.cxx  ModuleManagerTPC.h
Run/: CMakeLists.txt  RunManager.cxx  RunManager.h  ro2simRun_LinkDef.h
Simulation/: CMakeLists.txt  SimulationManager.h
SimulationManager/: CMakeLists.txt  SimulationManager.cxx  SimulationManager.h  o2simSimulationManager_LinkDef.h
Trigger/: CMakeLists.txt  ParticleTrigger.cxx  Trigger.cxx  TriggerHepMC.cxx  TriggerHepMC.h  TriggerManagerDelegate.cxx  TriggerManagerParticle.h  TriggerTGenerator.cxx  TriggerTGenerator.h  ro2simTrigger_LinkDef.h
TriggerManager/: CMakeLists.txt  ParticleTrigger.cxx  ParticleTrigger.h  Trigger.cxx  Trigger.h  TriggerManagerDelegate.h  TriggerManagerParticle.cxx  o2simTriggerManager_LinkDef.h
cmake/: O2SimUtils.cmake
examples/: o2sim.cfg  o2sim.generator.cfg  o2sim.hijing.cfg  o2sim.module.cfg  (+4 more)
o2sim/: CMakeLists.txt  o2sim.cxx
ro2sim/: CMakeLists.txt  ro2sim.cxx
(+13 files in other folders)
